# fast_cursor

./: CLAUDE.md  README.md  main.py  openapi.json  pyproject.toml  schemas.py  settings.py
.claude/commands/: python_best_practices.md
.cursor/rules/: fastapi-best-practices.mdc  project.mdc  pydantic-best-practices.mdc
